[package]
name = "estaudio-fork-signalsmith-stretch"
description = "A custom fork of signalsmith-stretch-rs that use my own fork of signalsmith for audio processing."
version = "0.1.5"
edition = "2024"
authors = ["Colin Marc <hi@colinmarc.com>", "Estrol Mendex <estrol@estrol.dev>"]
license = "MIT"

[dependencies]
dasp = "0.11"

[build-dependencies]
bindgen = "0.72"
cc = "1"

[dev-dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
cpal = "0.15"
hound = "3"
oneshot = "0.1"

